opam-version: "1.2"
name: "xapi-work-queues"
version: "0.1.0"
maintainer: "\"xen-api@lists.xen.org\""
authors: [ "\"xen-api@lists.xen.org\"" ]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "https://github.com/xapi-project/xapi-work-queues"
dev-repo: "https://github.com/xapi-project/xapi-work-queues.git"
bug-reports: "https://github.com/xapi-project/xapi-work-queues/issues"
build: [[ "jbuilder" "build" "-p" name ]]
build-test: ["jbuilder" "runtest" "-p" name]
depends: [
  "base-threads"
  "jbuilder" {build & >= "1.0+beta11"}
  "alcotest"
  "xapi-idl"
  "xapi-stdext-pervasives"
  "xapi-stdext-threads"
]
available: [ ocaml-version >= "4.02.3" ]
