(* -*- tuareg -*- *)
let coverage_rewriter =
  match Sys.getenv "BISECT_ENABLE" with
  | "YES" -> "bisect_ppx"
  | _ -> ""
  | exception Not_found -> ""

let () = Printf.ksprintf Jbuild_plugin.V1.send {|
(library
  (name xapi_depriv)
  (public_name xapi-xenopsd.depriv)
  (modules (:standard \ depriv_cli))
  (flags (:standard -w -39))
  (libraries xcp threads rpclib.core)
  (wrapped false)
  (preprocess (pps ppx_deriving_rpc %s)))

(executable
  (name depriv_cli)
  (modules depriv_cli)
  (libraries
    cmdliner
    rpclib.cmdliner
    rpclib.markdown
    xapi-xenopsd.depriv))

(alias
 (name   runtest)
 (deps   (:x depriv_cli.exe))
 (action (run %%{x})))

|} coverage_rewriter
